more overflow bug fixes

--- a/assets/css/vent.css
+++ b/assets/css/vent.css
@@ -1,3 +1,6 @@
+body {
+	position: relative;
+}
 .amogus {
 	width: 100%;
 	height: 100%;
